@@ -1,5 +1,6 @@
 import React from 'react';
 import styled from '@emotion/styled';
+import PaymentMethodMissingCurrencyPill from '../../components/payment-method-missing-currency-pill';
 
 const Wrapper = styled.div`
 	display: flex;
@@ -40,6 +41,7 @@ const PaymentMethodDescription = ( {
 	Icon = () => null,
 	label,
 	description,
+	id,
 	...restProps
 } ) => {
 	return (
@@ -50,6 +52,10 @@ const PaymentMethodDescription = ( {
 			<div>
 				<LabelWrapper>
 					<Label>{ label }</Label>
+					<PaymentMethodMissingCurrencyPill
+						id={ id }
+						label={ label }
+					/>
 				</LabelWrapper>
 				<Description>{ description }</Description>
 			</div>
