@@ -7,6 +7,7 @@
 * Fix - Handle checkbox type required fields correctly on the shortcode checkout when paying with Google Pay/Apple Pay.
 * Tweak - Remove unused confirmation modal a capability properties.
 * Fix - Resgister script on the checkout page only when the gateway is enabled.
+* Tweak - Allow to enable/disable payment methods irrespective of currency requirement.
 
 = 8.3.0 - xxxx-xx-xx =
 * Add - Include Afterpay (Clearpay in the UK) as a payment method for stores using the updated checkout experience.
